fix solution image cropping

--- a/web/themes/custom/athex/css/node/solutions.scss
+++ b/web/themes/custom/athex/css/node/solutions.scss
@@ -692,6 +692,8 @@ span.siCta a {
             img {
                 height: 480px;
                 width: 884px;
+				object-fit: cover;
+				object-position: top;
             }
         }
     }
